# AHarker_Externals

./: .gitignore  .gitmodules  AH Externals.sln  AH_Externals_Info.plist  AH_MaxMSP4.xcconfig  AH_MaxMSP5.xcconfig  AH_MaxMSP6.xcconfig  AH_OneMKL.props  AH_Win_Debug.props  AH_Win_Release.props  CMakeLists.txt  Config_AHarker_Externals.xcconfig  LICENSE  README.md  _Docs_Getting_Started_.rtf  _Docs_License_.rtf  _Notes.rtf
.github/workflows/: autobuild.yml
AH Externals.xcodeproj/: project.pbxproj
AH_Externals_Config/: Config_AH_Ext_Mac.xcconfig  Config_AH_Ext_Win_Debug.props  Config_AH_Ext_Win_Release.props
AH_Externals_Legacy/: _Docs_License_.rtf  _Notes.rtf  vaudio-objectmappings.txt
AH_Externals_Packaging/: License.rtf  Readme.rtf  descriptors~.maxhelp
AH_Externals_Projects/: ahnoise~.vcxproj  chebyshape~.vcxproj  denormkiller~.vcxproj  depack.vcxproj  descriptorsrt~.vcxproj  descriptors~.vcxproj  dynamic.in~.vcxproj  dynamic.out~.vcxproj  dynamic.patch~.vcxproj  dynamic.request~.vcxproj  dynamic.this~.vcxproj  dynamicdsp~.vcxproj  dynamicserial~.vcxproj  entrymatcher.vcxproj  entrymatcher~.vcxproj  gesture_maker.vcxproj  getthread.vcxproj  ibufconcatedrive~.vcxproj  ibufconcatenate~.vcxproj  ibuffermulti~.vcxproj  ibuffer~.vcxproj  ibufinfo~.vcxproj  ibufmultitable~.vcxproj  ibufplayer~.vcxproj  ibuftable~.vcxproj  kernelmaker~.vcxproj  macaddress.vcxproj  meandev.vcxproj  partconvolve~.vcxproj  randfloats.vcxproj  randomvals.vcxproj  randomvals~.vcxproj  rbiquad~.vcxproj  rdcblock~.vcxproj  recursivefolder.vcxproj  schedulemessage.vcxproj  threadfilter.vcxproj  timeconvolve~.vcxproj  timefilter.vcxproj  timemap.vcxproj  (+26 more)
AH_MaxMSP_Headers/: AH_Atomic.h  AH_Containers.hpp  AH_Denormals.h  AH_Int_Handler.hpp  AH_LTQ_Norm.h  AH_Lifecycle.hpp  AH_Locks.hpp  AH_MSP_Version.pch  AH_Max5.h  AH_Max_4&5_Loader.c  AH_Memory_Swap.h  AH_Private_Object.hpp  AH_Rand_Seed.h  AH_Random.h  AH_Types.h  AH_VectorOps.h  AH_VectorOpsExtended.h  Interpolation.hpp  RandomGenerator.hpp  SIMDExtended.hpp  SIMDSupport.hpp  Statistics.hpp  TableReader.hpp  dynamicdsp~.h  dynamic~.hpp  erf.h  ibuffer.h  ibuffer.hpp  ibuffer_access.c  ibuffer_access.cpp  ibuffer_access.h  ibuffer_access.hpp  nextafterf.c  nextafterf.h
AH_MaxMSP_Headers/HISSTools_FFT/: FFT_Setup.h  (+3 more)
AH_Max_SDK/: .gitignore
QUARANTINE/: AH_Atomic.h  AH_Memory_Swap.hpp  erf.c  ibuffer_access.c  ibuffer_access.h
dependencies/: CMakeLists.txt
dependencies/ibuffer_access/: ibuffer.hpp  ibuffer_access.cpp
include/: AH_Containers.hpp  AH_Int_Handler.hpp  AH_Locks.hpp  AH_Private_Object.hpp
projects/: ahnoise~.vcxproj  chebyshape~.vcxproj  denormkiller~.vcxproj  depack.vcxproj  descriptorsrt~.vcxproj  descriptorsrt~.vcxproj.filters  descriptors~.vcxproj  descriptors~.vcxproj.filters  dynamic.in~.vcxproj  dynamic.out~.vcxproj  dynamic.patch~.vcxproj  dynamic.request~.vcxproj  dynamic.this~.vcxproj  dynamicdsp~.vcxproj  dynamicserial~.vcxproj  entrymatcher.vcxproj  entrymatcher~.vcxproj  gesture_maker.vcxproj  getthread.vcxproj  ibufconcatedrive~.vcxproj  ibufconcatenate~.vcxproj  ibuffermulti~.vcxproj  ibuffer~.vcxproj  ibufinfo~.vcxproj  ibufmultitable~.vcxproj  ibufplayer~.vcxproj  ibuftable~.vcxproj  kernelmaker~.vcxproj  macaddress.vcxproj  meandev.vcxproj  partconvolve~.vcxproj  randfloats.vcxproj  randomvals.vcxproj  randomvals~.vcxproj  rbiquad~.vcxproj  rdcblock~.vcxproj  recursivefolder.vcxproj  schedulemessage.vcxproj  threadfilter.vcxproj  timeconvolve~.vcxproj  (+43 more)
scripts/: install_mkl.py
(+1594 files in other folders)
